--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,107 +12,20 @@
     <script src="graph.js"> </script>
     <script src="data.js"> </script>
 </head>
-
 <body>
-
     <h1>Selecione uma matéria</h1>
     <select id="vertex-select">
         <option value="" disabled selected>Selecione uma matéria</option>
     </select>
+    
     <button onclick="submitForm()">Enviar <b> > </b> </button>
-    <script>
-        const vertexSelect = document.getElementById('vertex-select');
-        const directDependents = document.getElementById('direct-dependents');
-        const indirectDependents = document.getElementById('indirect-dependents');
-        const dependenciesList = document.getElementById('dependencies');
-
-
-        function populateSelect() {
-            const vertices = graph.getVertices();
-            const index = vertices.indexOf('');
-            if (index !== -1) {
-                vertices.splice(index, 1);
-            }
-            vertices.forEach((vertex) => {
-                const option = document.createElement('option');
-                option.value = vertex;
-                option.textContent = vertex;
-                vertexSelect.appendChild(option);
-            });
-        }
-
-        function submitForm() {
-            const vertex = vertexSelect.value;
-
-            // Dependentes diretos e indiretos
-            const dependents = findRelatedVertices(graph, vertex);
-            const directDependencies = dependents[0];
-            const indirectDependencies = dependents[1];
-
-            const indirectDependenciesContainer = document.getElementById('indirect-dependents');
-            indirectDependenciesContainer.innerHTML = '';
-            indirectDependencies.forEach((subject) => {
-                const box = document.createElement('div');
-                box.className = 'box';
-                const text = document.createElement('span');
-                text.textContent = subject;
-                box.appendChild(text);
-                indirectDependenciesContainer.appendChild(box);
-            });
-
-            // Dependentes diretos
-            const directDependenciesContainer = document.getElementById('direct-dependents');
-            directDependenciesContainer.innerHTML = '';
-            directDependencies.forEach((subject) => {
-                const box = document.createElement('div');
-                box.className = 'box';
-                const text = document.createElement('span');
-                text.textContent = subject;
-                box.appendChild(text);
-                directDependenciesContainer.appendChild(box);
-            });
-
-            // Dependências
-            const dependenciesContainer = document.getElementById('dependencies');
-            dependenciesContainer.innerHTML = '';
-            const dependencies = findDependenciesInGraph(graph, vertex);
-            dependencies.forEach((dependency) => {
-                const box = document.createElement('div');
-                box.className = 'box';
-                const text = document.createElement('span');
-                text.textContent = dependency;
-                box.appendChild(text);
-                dependenciesContainer.appendChild(box);
-            });
-
-
-
-
-        }
-
-        populateSelect();
-        // Dependentes indiretos
-        const indirectDependenciesContainer = document.getElementById('indirect-dependents');
-        indirectDependenciesContainer.innerHTML = '';
-        indirectDependencies.forEach((subject) => {
-            const box = document.createElement('div');
-            box.className = 'box';
-            
-            const text = document.createElement('span');
-            text.textContent = subject;
-            box.appendChild(text);
-            indirectDependenciesContainer.appendChild(box);
-        });
-
-    </script>
-
+    <script src="square.js"></script>
     <h1>Dependentes diretos</h1>
     <div id="direct-dependents" class="container"></div>
     <h1>Dependentes indiretos</h1>
     <div id="indirect-dependents" class="container"></div>
     <h1>Dependências</h1>
     <div id="dependencies" class="container"></div>
-
 </body>
 
 </html>
