--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
     <script src="data.js"> </script>
 </head>
 <body>
-    <h1>Selecione uma matéria</h1>
     <select id="vertex-select">
         <option value="" disabled selected>Selecione uma matéria</option>
     </select>
     
     <button onclick="submitForm()">Enviar <b> > </b> </button>
     <script src="square.js"></script>
-    <h1>Dependentes diretos</h1>
+    <h1>Dependente diretamente</h1>
     <div id="direct-dependents" class="container"></div>
-    <h1>Dependentes indiretos</h1>
+    <h1>Depende indiretamente</h1>
     <div id="indirect-dependents" class="container"></div>
-    <h1>Dependências</h1>
+    <h1>Pré-Requisitos</h1>
     <div id="dependencies" class="container"></div>
 </body>
 
