adicona label para extensao

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="legend-item">
             <div class="color-box" style="background-color: #FF8C00;"></div>
-            <span>Desconhecido</span>
+            <span>Pesquisa e extensão</span>
         </div>
     </div>
 
