--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
    
     <script src="square.js"></script>
-    <h1>Dependente diretamente</h1>
+    <h1>Depende diretamente</h1>
     <div id="direct-dependents" class="container"></div>
     <h1>Depende indiretamente</h1>
     <div id="indirect-dependents" class="container"></div>
