--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     </div>
 
     <script src="square.js"></script>
-    <h1>Depende diretamente</h1>
+    <h1>Depende diretamente da disciplina selecionada</h1>
     <div id="direct-dependents" class="container"></div>
-    <h1>Depende indiretamente</h1>
+    <h1>Depende indiretamente da disciplina selecionada</h1>
     <div id="indirect-dependents" class="container"></div>
-    <h1>Pré-Requisitos</h1>
+    <h1>Pré-Requisitos da disciplina selecionada</h1>
     <div id="dependencies" class="container"></div>
 </body>
 
